--- a/styles.css
+++ b/styles.css
@@ -107,12 +107,7 @@ header{
     max-height:5em;
     font-weight:700;
 }
-.categort-items{
- display:flex;
- flex-wrap: wrap;
- justify-content: space-evenly;
- 
-}
+
 .sale-items{
     width:250px;
 }
@@ -143,3 +138,107 @@ header{
     text-align: center;
     padding:15px;
 }
+.items-container{
+    width:80%;
+    margin:50px 10%;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+ 
+}
+    .item-container{
+        width: 200px;
+        margin:10px;
+       
+      
+    }
+    .item-image{
+        width:100%;
+    }
+    .rating{
+        font-size:12px;
+        font-weight:700;
+    }
+    .company-name{
+        margin-top:15px;
+        font-size:16px;
+        font-weight:700;
+        line-height:1;
+        color:#282c3f;
+        margin-bottom:6px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+    .item-name{
+        color:#535766;
+        font-size:14px;
+        line-height: 1;
+        margin-bottom:0;
+        margin-top: 0;
+        margin-bottom:5px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-weight: 400;
+        display: block;
+    }
+    .price{
+        margin-top:10px;
+        font-size:14px;
+        line-height:15px;
+        white-space: nowrap;
+        color:#282c3f;
+
+    }
+    .current-price{
+        font-weight: 700;
+        color:#282c3f;
+    }
+    .original-price{
+        text-decoration: line-through;
+        color:#7e818c;
+        font-weight: 400;
+        margin-left:5px;
+        font-size: 12px;
+    }
+    .discount{
+        color:#ff905a;
+        font-weight: 400;
+        font-size:12px;
+        margin-left:5px;
+    }
+    .add-bag{
+        background-color: rgb(90, 247, 90);
+        border:none;
+        padding:5px 0px;
+        border-radius:10px;
+        cursor: pointer;
+        margin-top:10px;
+        font-weight:700;
+        WIDTH:100%;
+        font-size:14px;
+
+    }
+    .bag-item-count{
+    background-color: #f16565;
+    white-space: nowrap;
+    text-align: center;
+    line-height: 18px;
+    padding: 0 6px;
+    height: 18px;
+    position: relative;
+    border-radius: 50%;
+    font-size: 12px;
+    color: #fff;
+    left: 13px;
+    top: -44px;
+    font-weight: 700;
+    cursor: pointer;
+    }
+    .action-container {
+        text-decoration: none;
+    }
+    a.action-container:link {
+        color:black;
+    }
